env dosyası silindi